# text-to-speech-resemble-ai

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: tts.py
