[tool.poetry]
name = "text-to-speech-resemble-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "text_to_speech_resemble_ai"}]

[tool.poetry.dependencies]
python = "^3.9"
resemble = "^1.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
